# EntityMap

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml  requirements_test.txt
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  validate.yml
custom_components/entitymap/: __init__.py  analysis.py  button.py  config_flow.py  const.py  diagnostics.py  fragility.py  graph.py  manifest.json  migration.py  models.py  panel.py  repairs.py  sensor.py  services.py  services.yaml  strings.json
custom_components/entitymap/adapters/: __init__.py  automation.py  base.py  group.py  registry.py  scene.py  script.py  template.py
custom_components/entitymap/frontend/: entitymap-panel.js
custom_components/entitymap/translations/: pl.json
docs/: architecture.md  dashboard.yaml  dependency-model.md
docs/cards/: actions-fragility.yaml  all-in-one.yaml  fragility-history.yaml  graph-growth.yaml  graph-stats-gauges.yaml  status-overview.yaml
scripts/: pre-commit
tests/: __init__.py
tests/components/: __init__.py
tests/components/entitymap/: conftest.py  test_analysis.py  test_config_flow.py  test_diagnostics.py  test_fragility.py  test_graph.py  test_migration.py  test_models.py
