[project]
name = "entitymap"
version = "1.0.0"
description = "Home Assistant dependency mapping and impact analysis integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "POLPROG" },
]

[project.urls]
Homepage = "https://polprog.pl/"
Documentation = "https://github.com/polprog-tech/EntityMap"
Repository = "https://github.com/polprog-tech/EntityMap"
Issues = "https://github.com/polprog-tech/EntityMap/issues"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
    "BLE",    # flake8-blind-except
    "PLW",    # pylint warnings
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.entitymap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
