[project]
name = "entitymap"
version = "1.0.0"
description = "Home Assistant dependency mapping and impact analysis integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "POLPROG" },
]

[project.urls]
Homepage = "https://polprog.pl/"
Documentation = "https://github.com/polprog-tech/EntityMap"
Repository = "https://github.com/polprog-tech/EntityMap"
Issues = "https://github.com/polprog-tech/EntityMap/issues"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except
    "C4",     # flake8-comprehensions
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "PLW",    # pylint warnings
    "RUF",    # ruff-specific
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.entitymap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "voluptuous.*",
    "aiohttp.*",
    "pytest_homeassistant_custom_component.*",
]
ignore_missing_imports = true
